[package]
name = "tursorm-macros"
version = "0.0.1"
edition = "2024"
description = "Procedural macros for tursorm"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.111", features = ["full", "extra-traits"] }
convert_case = "0.10.0"
